Aggiunti parametri encoding IT